--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <!-- Main App JS -->
   <script src="app.js"></script>
   <script src="home/home.js"></script>
+  <script src="panel/panel.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
