--- a/panel/panel.html
+++ b/panel/panel.html
@@ -3,7 +3,17 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div data-ng-controller="PanelController">
-   TODO
+
+
+<div ng-controller="PanelController">
+   Open elections
+
+   <ol>
+       <li ng-repeat="election in elections.objects">
+           {{election.pretty_name}}
+       </li>
+   </ol>
+   
+   
 </div>
 
