--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="app.js"></script>
   <script src="home/home.js"></script>
   <script src="panel/panel.js"></script>
+  <script src="election/election.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
