Forgot to added it on last commit. Panel updated to pass election id to election view

--- a/panel/panel.html
+++ b/panel/panel.html
@@ -10,7 +10,7 @@ and open the template in the editor.
 
    <ol>
        <li ng-repeat="election in elections.objects">
-           {{election.pretty_name}}
+           <a ui-sref="election({ id: election.id })">{{election.pretty_name}}</a>
        </li>
    </ol>
    
