working on the voting booth structure

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
   <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
   <!-- Add New Bower Component JS Above -->
 
+  <!-- Configuration file JS -->
+  <script src="config.js" data-concat="false"></script>
 
   <!-- Main App JS -->
   <script src="app.js"></script>
   <script src="home/home.js"></script>
   <script src="panel/panel.js"></script>
   <script src="election/election.js"></script>
+  <script src="avBooth/booth.js"></script>
+  <script src="avBooth/booth-directive/booth-directive.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
