--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
   <script src="avBooth/booth-directive/booth-directive.js"></script>
   <!-- Add New Component JS Above -->
 
+  <!-- Encryptor JS -->
+  <script src="crypto/agora-encryptor.js"></script>
+  <script src="crypto/jsbn.js"></script>
+  <script src="crypto/jsbn2.js"></script>
+  <script src="crypto/bigint.js"></script>
+  <script src="crypto/class.js"></script>
+  <script src="crypto/elgamal.js"></script>
+  <script src="crypto/random.js"></script>
+  <script src="crypto/sha1.js"></script>
+  <script src="crypto/sha2.js"></script>
+  <script src="crypto/sjcl.js"></script>
+
   <div>
     <!-- MAIN CONTENT -->
     <div id="content" class="container">
