--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+  <script src="bower_components/i18next/i18next.js"></script>
+  <script src="bower_components/ng-i18next/dist/ng-i18next.js"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- Configuration file JS -->
@@ -51,7 +53,7 @@
 
   <div>
     <!-- MAIN CONTENT -->
-    <div id="content" class="container">
+    <div id="content">
       <!-- THIS IS WHERE WE WILL INJECT OUR CONTENT ============================== -->
       <div ui-view>
       </div>
