moving agora-encryptor to a service called EncryptAnswerService

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Add New Component JS Above -->
 
   <!-- Encryptor JS -->
-  <script src="crypto/agora-encryptor.js"></script>
+  <script src="crypto/encrypt-answer.js"></script>
   <script src="crypto/jsbn.js"></script>
   <script src="crypto/jsbn2.js"></script>
   <script src="crypto/bigint.js"></script>
