--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="config.js" data-concat="false"></script>
 
   <!-- Crypto library JS -->
+  <script src="crypto/crypto.js"></script>
   <script src="crypto/encrypt-answer.js"></script>
   <script src="crypto/hmac.js"></script>
   <script src="crypto/jsbn.js"></script>
