--- a/playground/persiana/persiana.html
+++ b/playground/persiana/persiana.html
@@ -38,7 +38,7 @@
           </button>
           <a class="navbar-brand" href="#">Project name</a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse persiana">
           <ul class="nav navbar-nav">
           <li><div class="progress" style="margin-left:15px; margin-right:15px;">
   <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
