--- a/avBooth/booth.html
+++ b/avBooth/booth.html
@@ -5,4 +5,4 @@
   <li>HMAC message: {{ hmacMessage }}</li>
   <li>Election API url: {{ baseUrl }}election/{{ electionId }}</li>
 </ul>
-<av-booth election-url="{{baseUrl}}election/{{electionId}}"></booth>
+<av-booth election-url="{{baseUrl}}election/{{electionId}}" config="{{config}}"></booth>
