--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -1,10 +1,10 @@
-<div ng-if="status == statusEnum.receiving">
-  <p>booth directive working! and the election url is "{{ electionUrl }}". Loading..</p>
-</div>
+<av-busy ng-if="status == statusEnum.receiving">
+  <h1 ng-i18next="avBooth.loadingElectionTitle"></h1>
+</avBusy>
 <div ng-if="status == statusEnum.errorLoading">
-  <p>booth directive working! and the election url is "{{ electionUrl }}", but there was an error loading it</p>
+  <p>booth directive working! and the election url is "{{electionUrl}}", but there was an error loading it</p>
 </div>
 <div ng-if="status == statusEnum.loaded">
-  <p>booth directive working! and the election url is "{{ electionUrl }}", Election loaded!</p>
+  <p>booth directive working! and the election url is "{{electionUrl}}", Election loaded!</p>
   <p ng-i18next="app.name"></p>
 </div>
