--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -1,5 +1,5 @@
 <av-busy ng-if="status == statusEnum.receiving">
-  <h1 ng-i18next="avBooth.loadingElectionTitle"></h1>
+  <p ng-i18next="avBooth.loadingElectionTitle"></p>
 </avBusy>
 <div ng-if="status == statusEnum.errorLoading">
   <p>booth directive working! and the election url is "{{electionUrl}}", but there was an error loading it</p>
