--- a/avBooth/busy-directive/busy-directive.html
+++ b/avBooth/busy-directive/busy-directive.html
@@ -1,3 +1,4 @@
-<div class="title" ng-transclude>
+<div class="avb-busy-loading">
+  <div class="title" ng-transclude></div>
+  <div class="loading-gear"></div>
 </div>
-<div class="avb-busy-indicator"></div>
