better looking busy box

--- a/avBooth/busy-directive/busy-directive.html
+++ b/avBooth/busy-directive/busy-directive.html
@@ -1,4 +1,2 @@
-<div class="avb-busy-loading">
-  <div class="title" ng-transclude></div>
-  <div class="loading-gear"></div>
-</div>
+<div class="avb-busy-title" ng-transclude></div>
+<div class="avb-busy-loading"></div>
