--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <script src="avBooth/booth.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
+  <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
   <script src="test/test_hmac.js" class="app"></script>
   <!-- Add New Component JS Above -->
 
