moving external crypto libs into vendor folder

--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@
   <script src="avConfig.js"></script>
 
   <!-- Crypto library JS -->
+  <script src="vendor/crypto/jsbn.js" class="app"></script>
+  <script src="vendor/crypto/jsbn2.js" class="app"></script>
+  <script src="vendor/crypto/bigint.js" class="app"></script>
+  <script src="vendor/crypto/class.js" class="app"></script>
+  <script src="vendor/crypto/elgamal.js" class="app"></script>
+  <script src="vendor/crypto/random.js" class="app"></script>
+  <script src="vendor/crypto/sha1.js" class="app"></script>
+  <script src="vendor/crypto/sha2.js" class="app"></script>
+  <script src="vendor/crypto/sjcl.js" class="app"></script>
+
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/encrypt-answer.js" class="app"></script>
   <script src="crypto/hmac.js" class="app"></script>
-  <script src="crypto/jsbn.js" class="app"></script>
-  <script src="crypto/jsbn2.js" class="app"></script>
-  <script src="crypto/bigint.js" class="app"></script>
-  <script src="crypto/class.js" class="app"></script>
-  <script src="crypto/elgamal.js" class="app"></script>
-  <script src="crypto/random.js" class="app"></script>
-  <script src="crypto/sha1.js" class="app"></script>
-  <script src="crypto/sha2.js" class="app"></script>
-  <script src="crypto/sjcl.js" class="app"></script>
 
   <!-- Main App JS -->
   <script src="app.js" class="app"></script>
