adding new vendor dependency: nanoscroller, and moving crypto libs to lib.js compiled file in grunt build

--- a/index.html
+++ b/index.html
@@ -45,19 +45,23 @@
   <script src="bower_components/ng-i18next/dist/ng-i18next.js" class="lib"></script>
   <!-- Add New Bower Component JS Above -->
 
+  <!-- JS from Vendor Components -->
+  <script src="vendor/crypto/jsbn.js" class="lib"></script>
+  <script src="vendor/crypto/jsbn2.js" class="lib"></script>
+  <script src="vendor/crypto/bigint.js" class="lib"></script>
+  <script src="vendor/crypto/class.js" class="lib"></script>
+  <script src="vendor/crypto/elgamal.js" class="lib"></script>
+  <script src="vendor/crypto/random.js" class="lib"></script>
+  <script src="vendor/crypto/sha1.js" class="lib"></script>
+  <script src="vendor/crypto/sha2.js" class="lib"></script>
+  <script src="vendor/crypto/sjcl.js" class="lib"></script>
+  <script src="vendor/jquery.nanoscroller/nanoscroller.js" class="lib"></script>
+  <!-- Add New Vendor Component JS Above -->
+
   <!-- Configuration file JS -->
   <script src="avConfig.js"></script>
 
   <!-- Crypto library JS -->
-  <script src="vendor/crypto/jsbn.js" class="app"></script>
-  <script src="vendor/crypto/jsbn2.js" class="app"></script>
-  <script src="vendor/crypto/bigint.js" class="app"></script>
-  <script src="vendor/crypto/class.js" class="app"></script>
-  <script src="vendor/crypto/elgamal.js" class="app"></script>
-  <script src="vendor/crypto/random.js" class="app"></script>
-  <script src="vendor/crypto/sha1.js" class="app"></script>
-  <script src="vendor/crypto/sha2.js" class="app"></script>
-  <script src="vendor/crypto/sjcl.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/encrypt-answer.js" class="app"></script>
