move ie10-viewport-bug-workaround.js to root dir

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
   <script src="avConfig.js"></script>
 
   <!-- Crypto library JS -->
-
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/encrypt-answer.js" class="app"></script>
   <script src="crypto/hmac.js" class="app"></script>
@@ -75,6 +74,10 @@
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
   <script src="test/test_hmac.js" class="app"></script>
+
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="ie10-viewport-bug-workaround.js"></script>
+  
   <!-- Add New Component JS Above -->
 
   <div>
