--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -1,1 +1,35 @@
-Start screen!
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="pull-left" ng-i18next="[avBooth.stepNumber]({num:0,total:3})">
+    </div>
+    <div class="pull-right">
+      <span class="glyphicon glyphicon-question-sign"></span>
+    </div>
+  </div>
+</nav>
+
+<div class="content avb-content">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <h2 ng-i18next="avBooth.selectOptionsTitle"></h2>
+        <p  ng-i18next="avBooth.selectOptionsText"></p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <h2 ng-i18next="avBooth.reviewOptionsTitle"></h2>
+        <p  ng-i18next="avBooth.reviewOptionsText"></p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <h2 ng-i18next="avBooth.encryptAndEmitBallotTitle"></h2>
+        <p  ng-i18next="avBooth.encryptAndEmitBallotText"></p>
+      </div>
+    </div>
+    <div class="row" av-affix-bottom>
+      <button
+        class="btn btn-block btn-lg btn-success btn-plain"
+        ng-i18next="avBooth.startVoting"
+        id="start-voting-btn">
+      </button>
+    </div>
+  </div>
+</div>
