add av-multi-question tag to booth.html

--- a/avBooth/booth.html
+++ b/avBooth/booth.html
@@ -1,2 +1,3 @@
 <av-booth election-url="{{baseUrl}}election/{{electionId}}" config="{{config}}">
 </av-booth>
+<av-multi-question></av-multi-question>
