--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <script src="avUi/avUi.js" class="app"></script>
   <script src="avUi/affix-bottom-directive.js" class="app"></script>
   <script src="avUi/affix-top-directive.js" class="app"></script>
+  <script src="avUi/collapsing-directive.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/encrypt-answer.js" class="app"></script>
