hidding toggle by default

--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div id="avb-toggle" class="text-center item-block">
+<div id="avb-toggle" class="text-center item-block hidden">
   <span class="glyphicon glyphicon-play"></span>
 </div>
 
