add affix-bottom force-affix-width optional parameter

--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -41,7 +41,7 @@
         <p ng-i18next="avBooth.encryptAndEmitBallotText"></p>
       </div>
     </div>
-    <div class="row" av-affix-bottom>
+    <div class="row" av-affix-bottom data-force-affix-width="768">
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
         ng-i18next="avBooth.startVoting"
