--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -15,8 +15,8 @@
 <div class="wrapper-unfixed">
   <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="#avb-toggle">
     <div class="hidden unfixed-top-height"></div>
-    <h1>Asamblea Ciudadana: elige tu forma de representación</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt ipsum in laoreet. Integer interdum ex eget odio commodo vulputate. Mauris tristique congue elit at gravida. Fusce in libero a eros luctus auctor. Vestibulum tellus mi, vehicula non nisi sed, lobortis tempus diam. Donec laoreet, enim quis blandit consectetur, elit neque dapibus sapien, eu faucibus nunc nibh eget dui. Duis elementum nisl ac nunc mattis ullamcorper. Vestibulum at ipsum nulla. Proin interdum metus vitae consectetur porta.</p>
+    <h1>{{election.pretty_name}}</h1>
+    <p>{{election.description}}</p>
   </div>
 </div>
 
