--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -14,9 +14,11 @@
 
 <div class="wrapper-unfixed">
   <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="#avb-toggle">
-    <div class="hidden unfixed-top-height"></div>
-    <h1>{{election.pretty_name}}</h1>
-    <p>{{election.description}}</p>
+    <div class="container">
+      <div class="hidden unfixed-top-height"></div>
+      <h1>{{election.pretty_name}}</h1>
+      <p>{{election.description}}</p>
+    </div>
   </div>
 </div>
 
