add initial help screen directive

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
+  <script src="avBooth/help-screen-directive/help-screen-directive.js" class="app"></script>
   <script src="test/test_hmac.js" class="app"></script>
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
