--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -4,7 +4,10 @@
       <div class="pull-left" ng-i18next="[i18next]({sprintf:['1','3']})avBooth.stepNumber">
       </div>
       <div class="pull-right">
-        <span class="glyphicon glyphicon-question-sign"></span>
+        <span class="glyphicon glyphicon-question-sign" ng-click="isCollapsed = !isCollapsed"></span>
+          <div collapse="!isCollapsed">
+            <div class="well well-lg"><av-help-screen></av-help-screen></div> 
+          </div>
       </div>
     </div>
     <div>
