minimal support for multi-question directive step

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -6,3 +6,5 @@
 </div>
 <av-start-screen ng-if="status == statusEnum.startScreen">
 </av-start-screen>
+<av-multi-question ng-if="status == statusEnum.multiQuestion">
+</av-multi-question>
