--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -46,8 +46,7 @@
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
         ng-i18next="avBooth.startVoting"
-        ng-click="next()"
-        id="start-voting-btn">
+        ng-click="next()">
       </button>
     </div>
   </div>
