--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <script src="avUi/affix-bottom-directive.js" class="app"></script>
   <script src="avUi/affix-top-directive.js" class="app"></script>
   <script src="avUi/collapsing-directive.js" class="app"></script>
+  <script src="avUi/recompile-directive.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/encrypt-answer.js" class="app"></script>
@@ -74,6 +75,7 @@
   <script src="app.js" class="app"></script>
   <script src="avBooth/booth.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
+  <script src="avBooth/busy-directive/error-directive.js" class="app"></script>
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
