fix start screen tag

--- a/avBooth/booth.html
+++ b/avBooth/booth.html
@@ -1,2 +1,4 @@
 <av-booth election-url="{{baseUrl}}election/{{electionId}}" config="{{config}}">
 </av-booth>
+
+<avb-start-screen></avb-start-screen>
